--- a/fetusapp/templates/base.html
+++ b/fetusapp/templates/base.html
@@ -14,17 +14,25 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Fetus</a>
+      <a class="navbar-brand" href="{{url_for('core.index')}}">Fetus</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="{{url_for('core.index')}}">Αρχική <span class="sr-only">(current)</span></a>
+          
+          
+          {% if current_user.is_authenticated %}
           <a class="nav-item nav-link" href="#">Καρτέλα Ασθενή</a>
           <a class="nav-item nav-link disabled" href="#">Διαχείριση</a>
+
+          {% else %}
+          
           <a class="nav-link" href="#">Σύνδεση</a>
-          <a class="nav-link" href="#">Εγγραφή</a>
+          <a class="nav-link" href="{{url_for('users.signup')}}">Εγγραφή</a>
+          
+          {% endif %}
         </div>
       </div>
     </nav>
