--- a/fetusapp/templates/base.html
+++ b/fetusapp/templates/base.html
@@ -20,17 +20,19 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="{{url_for('core.index')}}">Αρχική <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link {% if active_page == 'index' %}active{% endif %}" href="{{url_for('core.index')}}">Αρχική</a>
           
           
           {% if current_user.is_authenticated %}
           <a class="nav-item nav-link" href="#">Καρτέλα Ασθενή</a>
-          <a class="nav-item nav-link disabled" href="#">Διαχείριση</a>
-
+          <a class="nav-item nav-link" href="{{url_for('users.logout')}}">Αποσύνδεση</a>
+            {% if current_user.is_admin %}
+            <a class="nav-link {% if active_page == 'signup' %}active{% endif %}" href="{{url_for('users.signup')}}">Εγγραφή</a>
+            {% endif %}
           {% else %}
           
-          <a class="nav-link" href="#">Σύνδεση</a>
-          <a class="nav-link" href="{{url_for('users.signup')}}">Εγγραφή</a>
+          <a class="nav-link {% if active_page == 'login' %}active{% endif %}" href="{{url_for('users.login')}}">Σύνδεση</a>
+          <a class="nav-link {% if active_page == 'signup' %}active{% endif %}" href="{{url_for('users.signup')}}">Εγγραφή</a>
           
           {% endif %}
         </div>
