pushed login to index page.

--- a/fetusapp/templates/index.html
+++ b/fetusapp/templates/index.html
@@ -4,12 +4,38 @@
 
 {% block content %}
     <div class="jumbotron">
-        <h1>Home</h1>
-        {% if current_user.is_authenticated %}
-        <p>Καλώς ήρθες, {{current_user.username}}</p>
-        {% else %}
-        <p>Καλώς ήρθατε στο Fetus.app, παρακαλώ συνδεθείτε ή εγγραφείτε</p>
-        {% endif %}
+        
+
+        <div class="container" style="max-width: 80%;">
+            {% if current_user.is_authenticated %}
+                <p>Welcome to the Fetus.app, {{current_user.first_name}}!</p>
+                {% else %}
+                <p>Welcome to the Fetus.app!</p>
+                <p class="zd mt-4 pt-4">Please enter your details to login.</p>
+                <form method="post" class="mt-4">
+                    {{form.hidden_tag()}}
+                    <div class="row">
+                        <div class="col-lg-6 col-12 mb-3">
+                            {{ form.username(class="form-control", id="username", aria_describedby="usernameHelp", placeholder="Usersername") }}
+                            {% if error_message %}
+                                <small class="form-text text-muted mt-2">{{ error_message }}</small>
+                            {% endif %}
+                        </div>
+                        <div class="col-lg-6 col-12 mb-3">
+                            {{ form.password(class="form-control", id="password", aria_describedby="passwordHelp", type="password", placeholder="Password") }}
+                        </div>
+                        
+                    </div>
+        
+                    <div class="row">
+                        <div class="col">
+                            {{ form.submit(class="btn btn-primary") }}
+                        </div>
+                    </div>
+                </form>
+            {% endif %}
+        </div>
+        
     </div>
     
 {% endblock %}
