--- a/fetusapp/templates/login.html
+++ b/fetusapp/templates/login.html
@@ -5,8 +5,7 @@
 {% block content %}
     
 
-    <div class="container" style="width: 50%;">
-        <p class="mt-4">Please enter your details to login.</p>
+    <div class="container" style="max-width: 80%;">
         <form method="post" class="mt-4">
             {{form.hidden_tag()}}
             <div class="row">
