--- a/fetusapp/templates/base.html
+++ b/fetusapp/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/style.css">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -24,16 +25,11 @@
           
           
           {% if current_user.is_authenticated %}
-          <a class="nav-item nav-link" href="#">Καρτέλα Ασθενή</a>
-          <a class="nav-item nav-link" href="{{url_for('users.logout')}}">Αποσύνδεση</a>
+            <a class="nav-item nav-link" href="#">Καρτέλα Ασθενή</a>
             {% if current_user.is_admin %}
-            <a class="nav-link {% if active_page == 'signup' %}active{% endif %}" href="{{url_for('users.signup')}}">Εγγραφή</a>
+            <a class="nav-link {% if active_page == 'signup' %}active{% endif %}" href="{{url_for('users.signup')}}">Διαχείριση Χρηστών</a>
             {% endif %}
-          {% else %}
-          
-          <a class="nav-link {% if active_page == 'login' %}active{% endif %}" href="{{url_for('users.login')}}">Σύνδεση</a>
-          <a class="nav-link {% if active_page == 'signup' %}active{% endif %}" href="{{url_for('users.signup')}}">Εγγραφή</a>
-          
+            <a class="nav-item nav-link" href="{{url_for('users.logout')}}">Αποσύνδεση</a>
           {% endif %}
         </div>
       </div>
