--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -1,17 +1,43 @@
+:root {
+    /* Define color variables */
+    --calming-blue: #297FB9;         /* Primary button color */
+    --rich-navy: #0B3C5D;   /* Primary button hover color */
+    --gradient-color: 239, 83, 158;   /* RGB values for gradient without alpha */
+    --vibrant-pink: #EF539E;          /* Active state color for nav link */
+}
+
 .zd {
-    /* background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 55, 0) 100%); */
-    background-image: linear-gradient(90deg, rgba(239, 83, 158, 0) 0, rgba(239, 83, 158, 0.8) 50%, rgba(239, 83, 158, 0) 100%);
+    background-image: linear-gradient(
+        90deg, 
+        rgba(var(--gradient-color), 0) 0%, 
+        rgba(var(--gradient-color), 0.8) 50%, 
+        rgba(var(--gradient-color), 0) 100%
+    );
     background-size: 100% 1px;
     background-repeat: no-repeat;
     margin-top: 2em;
 }
 
 .btn-primary {
-    background-color: #297FB9;
-    border-color: #297FB9;
+    background-color: var(--calming-blue);
+    border-color: var(--calming-blue);
 }
 
 .btn-primary:hover {
-    background-color: #0B3C5D;
-    border-color: #0B3C5D;
+    background-color: var(--rich-navy);
+    border-color: var(--rich-navy);
 }
+
+.nav-pills .nav-link.active {
+    background-color: var(--vibrant-pink);
+    border-color: var(--vibrant-pink);
+}
+
+.nav-pills .nav-link {
+    /* color: #212529; */
+    color: var(--rich-navy);
+}
+
+/* .bg-light {
+    background-color: #F3E1D7 !important;
+} */
