--- a/fetusapp/templates/signup.html
+++ b/fetusapp/templates/signup.html
@@ -77,9 +77,32 @@
                     </form>
 
                 </div>
-                <div class="tab-pane fade {% if active_pill == 'update' %}show active{% endif %}" id="v-pills-password" role="tabpanel" aria-labelledby="v-pills-password-tab">Update Password</div>
+                <div class="tab-pane fade {% if active_pill == 'update' %}show active{% endif %}" id="v-pills-password" role="tabpanel" aria-labelledby="v-pills-password-tab">
+                    <p>Update Password</p>
+
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"> Delete Modal</button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-body">
+          Are you sure you want to delete this user?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary">Delete User</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+                </div>
                 <div class="tab-pane fade {% if active_pill == 'delete' %}show active{% endif %}" id="v-pills-delete" role="tabpanel" aria-labelledby="v-pills-delete-tab">
-                    
+
                     <form method="post" id="deleteForm">
                         {{deleteform.hidden_tag()}}
                         <div class="form-group mb-3">
@@ -101,13 +124,22 @@
                                 {% endif %}
                             {% endwith %}
                         </div>
-                        <div class="row">
-                            <div class="col">
-                                <button type="submit" name="action" value="delete" class="btn btn-primary">Delete User</button> 
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal2">Delete User</button>
+  
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                            <div class="modal-body">Are you sure you want to delete this user?</div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="submit" name="action" value="delete" class="btn btn-primary">Delete</button> 
+                            </div>
                             </div>
                         </div>
+                        </div>
                     </form>
-
                 </div>
             </div>
             </div>
