--- a/fetusapp/templates/signup.html
+++ b/fetusapp/templates/signup.html
@@ -194,8 +194,7 @@
                     </div>
                     <div class="col-lg-6 col-12 mb-3">
                       {{ updateform.pass_confirm(class="form-control",
-                      id="pass_confirm", type="password", placeholder="Re-enter
-                      password") }}
+                      id="pass_confirm", type="password", placeholder="Re-enter password") }}
                     </div>
                   </div>
 
