--- a/fetusapp/templates/base.html
+++ b/fetusapp/templates/base.html
@@ -12,24 +12,35 @@
       {% endblock %}
     </title>
 </head>
-<body class="d-flex flex-column h-100">
-
+<body class="d-flex flex-column min-vh-100 pt-4 bg-light">
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark"> 
       <div class="container-fluid">
-        <a class="navbar-brand" style="color: blueviolet;" href="{{url_for('core.index')}}"><img src="../static/_online_assets/logo.svg" alt="Logo" width="100" height="auto"></a>
+        <a class="navbar-brand" href="{{url_for('core.index')}}">
+          <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" class="d-block my-1" viewBox="0 0 60 60" role="img">
+            <title>Fetus</title>
+            <path fill="#EF539E" d="M30,0.667C13.801,0.667,0.667,13.801,0.667,30S13.801,59.333,30,59.333S59.333,46.199,59.333,30
+            S46.199,0.667,30,0.667z M27.995,8.492c3.712,0,6.731,3.02,6.731,6.73s-3.02,6.73-6.731,6.73c-3.711,0-6.729-3.02-6.729-6.73
+            S24.284,8.492,27.995,8.492z M46.23,34.977c-0.039,0.053-0.086,0.098-0.122,0.152c-0.984,1.508-7.896,4.289-16.762-0.291
+            c-1.435-0.74-3.192-0.178-3.932,1.252c-0.739,1.434-0.179,3.193,1.254,3.932c4.363,2.254,8.591,3.154,12.296,3.154
+            c0.318,0,0.63-0.01,0.938-0.021c-3.407,3.053-8.004,5.945-13.972,8.354c-26.798-25.283-7.564-30.904,0-28.311
+            c0.016-0.01,0.029-0.02,0.044-0.031c0.648,0.166,1.322,0.264,2.02,0.264c3.209,0,5.984-1.855,7.333-4.545
+            C45.365,16.91,50.745,25.398,46.23,34.977z"/>
+          <circle fill="#EF539E" cx="41.12" cy="31.995" r="3.622"/>
+          <path fill="#EF539E" d="M41.12,35.617c-2.001,0-3.622-1.621-3.622-3.621c0-2.002,1.621-3.623,3.622-3.623s3.623,1.621,3.623,3.623
+            C44.743,33.996,43.121,35.617,41.12,35.617z"/>  
+          </svg>
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
-
+            
+            {% if current_user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link {% if active_page == 'index' %}active{% endif %}" aria-current="page" href="{{url_for('core.index')}}">Αρχική</a>
             </li>
-
-
-            {% if current_user.is_authenticated %}
             <li>
               <a class="nav-link" href="#">Καρτέλα Ασθενή</a>
             </li>
@@ -42,27 +53,39 @@
                 <a class="nav-link {% if active_page == 'update_password' %}active{% endif %}" href="{{url_for('users.update_password')}}">Αλλαγή Κωδικού</a>
               </li>
               {% endif %}
-            <li>
-              <a class="nav-item nav-link" href="{{url_for('users.logout')}}">Αποσύνδεση</a>
-            </li>
             {% endif %}
           </ul>
-
+          
+          
+          {% if current_user.is_authenticated %}
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn-outline-light" type="submit">Search</button>
           </form>
+            {% if current_user.is_admin %}
+            <a class="ms-md-2 custom-link" href="{{url_for('users.signup')}}">
+              <div class="logged-user-icon">
+                {{ current_user.first_name[0] | upper }}{{ current_user.last_name[0] | upper }}
+              </div>
+            </a>
+            {% else %}
+            <a class="ms-md-2 custom-link" href="{{url_for('users.update_password')}}">
+              <div class="logged-user-icon">
+                {{ current_user.first_name[0] | upper }}{{ current_user.last_name[0] | upper }}
+              </div>
+            </a>
+            {% endif %}
+          {% endif %}
         </div>
       </div>
     </nav>
   </header>
-      
-  <main class="flex-shrink-0">
-    <div class="container mt-5">
-      {% block content %}
-      {% endblock %}
-    </div>
-  </main>
+
+
+  {% block content %}
+  
+  
+  {% endblock %}
 
 
 
@@ -71,7 +94,14 @@
       {% if current_user.is_authenticated %}
       <!-- User display, visible only on large screens -->
       <small>
-        Είστε συνδεδεμένοι ως χρήστης <em>{{ current_user.username }}</em> (powered by pdgr54)
+        Είστε συνδεδεμένοι ως χρήστης <em>{{ current_user.username }}</em> (powered by pdgr54). 
+        <a href="{{url_for('users.logout')}}">
+          Αποσύνδεση
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-door-open" viewBox="0 0 16 16">
+            <path d="M8.5 10c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1"/>
+            <path d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117M11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5M4 1.934V15h6V1.077z"/>
+          </svg>
+        </a>
       </small>
 
       {% else %}
